--- a/cpp_core/Makefile
+++ b/cpp_core/Makefile
@@ -1,18 +1,32 @@
+# Compiler and flags
 CXX = g++
-CXXFLAGS = -std=c++11 -Wall -O2
-TARGET = main
-OBJS = main.o allocation.o
+CXXFLAGS = -std=c++11 -Wall -O2 -I.
 
+# Executable name
+TARGET = mm_checker
+
+# Source files
+SRCS = mm.cpp allocation.cpp
+
+# Object files
+OBJS = $(SRCS:.cpp=.o)
+
+# Default target
 all: $(TARGET)
 
+# Link the object files to create the executable
 $(TARGET): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJS)
 
-main.o: main.cpp allocation.hpp
-	$(CXX) $(CXXFLAGS) -c main.cpp
+# Compile source files into object files
+%.o: %.cpp allocation.hpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-allocation.o: allocation.cpp allocation.hpp
-	$(CXX) $(CXXFLAGS) -c allocation.cpp
-
+# Clean up build files
 clean:
 	rm -f $(TARGET) $(OBJS)
+
+# Command to run the checker
+run: all
+	./$(TARGET)
+
