fixed the evolutionary_search.py along with mm.cpp

--- a/cpp_core/Makefile
+++ b/cpp_core/Makefile
@@ -1,15 +1,18 @@
 # Compiler and flags
 CXX = g++
-CXXFLAGS = -std=c++11 -Wall -Wextra -O2
+CXXFLAGS = -std=c++11 -Wall -Wextra -O2 -I/opt/homebrew/Cellar/nlohmann-json/3.12.0/include
 
 # Executables
 TARGET = mm_checker
+MM_CHECKER = mm_checker
 
 # Source files
 SOURCES = check_mm.cpp allocation.cpp
+MM_SOURCES = mm.cpp allocation.cpp
 
 # Object files
 OBJECTS = $(SOURCES:.cpp=.o)
+MM_OBJECTS = $(MM_SOURCES:.cpp=.o)
 
 # Default target
 all: $(TARGET)
@@ -17,6 +20,10 @@ all: $(TARGET)
 # Build the executable
 $(TARGET): $(OBJECTS)
 	$(CXX) $(OBJECTS) -o $(TARGET)
+
+# Build mm_checker from mm.cpp
+$(MM_CHECKER): $(MM_OBJECTS)
+	$(CXX) $(MM_OBJECTS) -o $(MM_CHECKER)
 
 # Compile source files to object files
 %.o: %.cpp allocation.hpp
@@ -26,9 +33,13 @@ $(TARGET): $(OBJECTS)
 run: $(TARGET)
 	./$(TARGET)
 
+# Run mm_checker
+run_mm: $(MM_CHECKER)
+	./$(MM_CHECKER)
+
 # Clean build artifacts
 clean:
-	rm -f $(OBJECTS) $(TARGET) mm.txt
+	rm -f $(OBJECTS) $(MM_OBJECTS) $(TARGET) $(MM_CHECKER) mm.txt
 
 # Install dependencies (if needed)
 install:
@@ -39,8 +50,9 @@ help:
 	@echo "Available targets:"
 	@echo "  all     - Build the executable (default)"
 	@echo "  run     - Build and run the program"
+	@echo "  run_mm  - Build and run mm_checker from mm.cpp"
 	@echo "  clean   - Remove build artifacts"
 	@echo "  help    - Show this help message"
 
-.PHONY: all run clean install help
+.PHONY: all run run_mm clean install help
 
